<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">


    <com.lepu.stethoscopic.widget.CommonTopBar
        android:id="@+id/commonbatr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imgView_logo"
        android:layout_below="@+id/relLayout_title"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/layout_phone"
        android:layout_below="@+id/imgView_logo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@color/white"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />

        <EditText
            android:id="@+id/login_phone"
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/phone_please"
            android:textColorHint="@color/txt_hint"
            android:textColor="@color/txt_normal"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_pwd"
        android:layout_below="@+id/layout_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />

        <EditText
            android:id="@+id/edt_login_pwd"
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/pwd_please"
            android:textColorHint="@color/txt_hint"
            android:textColor="@color/txt_normal"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/txt_forgetPwd"
        android:textColor="@color/txt_normal"
        android:layout_below="@+id/layout_pwd"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentRight="true"
        android:text="@string/forgetPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_login"
        android:layout_below="@+id/txt_forgetPwd"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/blueelector"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/register"
        android:layout_below="@+id/btn_login"
        android:text="@string/register"
        android:textSize="20sp"
        android:textColor="@color/txt_hint"
        android:background="@drawable/bg_input"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />


</RelativeLayout>